dev/manifests/voltran/account/deployment.yaml
---
# Source: app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
  labels:
    app.kubernetes.io/name: account
    app.kubernetes.io/family: dnext
    helm.sh/chart: app-0.9.1
    app.kubernetes.io/instance: account
    app.kubernetes.io/managed-by: Helm
  annotations:
    pia-team.com/role: pia.k8s.apps/0.35.0/orbitant/account
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: account
      app.kubernetes.io/instance: account
  template:
    metadata:
      labels:
        app.kubernetes.io/name: account
        app.kubernetes.io/family: dnext
        app.kubernetes.io/instance: account
        orbinant-monitoring: orbinant-prometheus-exporter
      annotations:
        pia-team.com/app: account



        checksum/otel-agent-props: 8534e4528c0a4f6f4dffe15077a90f466d0489bebc612176af070986ce78daf5
        checksum/secrets: ff29150be991cbea25dc1fb4fcfada8bae492d888bb02b9395eabd15d41af82d
        checksum/spring-override-config: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    spec:
      serviceAccountName: account
      volumes:
      - name: ssl-certs
        emptyDir: {}
      - name: custom-ca-certs
        configMap:
          name: custom-ca-certs
      - name: addons
        emptyDir: {}
      - name: data-volume
        emptyDir: {}
      - name: jks-volume
        secret:
          secretName: jks-store
      - name: otel-agent
        configMap:
          name: account-otel-agent-props
      # TODO: gseng - can we generalize this?
      containers:
      - name: account
        image: "europe-docker.pkg.dev/dnext-io/ghcr-dnext-technology/dnext-technology/orbitant/account/account:v1.27.0-1"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /api/accountManagement/v4/actuator/health/liveness
            port: http
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 5
        startupProbe:
          httpGet:
            path: /api/accountManagement/v4/actuator/health/readiness
            port: http
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 20
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "30"]
        resources:
          limits:
            cpu: 2000m
            memory: 2000Mi
          requests:
            cpu: 20m
            memory: 500Mi
        volumeMounts:
        - name: otel-agent
          mountPath: /addons/otel-agent.properties
          subPath: otel-agent.properties
        - name: custom-ca-certs
          mountPath: /etc/ssl/certs
          # TODO: gseng - can we generalize this?
        - name: addons
          mountPath: /addons
        - name: data-volume
          mountPath: /tmp
            # TODO: gseng - can we generalize this?
        - name: jks-volume
          mountPath: /app/jks
        - name: jks-volume
          mountPath: /opt/java/openjdk/lib/security/cacerts
          subPath: cacerts
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 101
          runAsGroup: 0
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: reg-creds
      hostAliases:
      - hostnames:
        - diam.orbitant.192.168.21.10.nip.io
        ip: 10.111.174.148
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: account
            release: account
            account: replica
  progressDeadlineSeconds: 3600
