dev/manifests/voltran/account/ingress.yaml
---
# Source: app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account
  labels:
    app.kubernetes.io/name: account
    app.kubernetes.io/family: dnext
    helm.sh/chart: app-0.9.1
    app.kubernetes.io/instance: account
    app.kubernetes.io/managed-by: Helm
  annotations:
    pia-team.com/app: account
    pia-team.com/dashboard: "true"
    pia-team.com/dashboard-scheme: https
    pia-team.com/dashboard-url: dacm-api.orbitant.192.168.21.10.nip.io/api/accountManagement/v4/
    pia-team.com/family: orbitant
    pia-team.com/role: pia.k8s.apps/0.35.0/orbitant/account
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "dacm-api.orbitant.192.168.21.10.nip.io"
    secretName: wildcard-tls
  rules:
  - host: "dacm-api.orbitant.192.168.21.10.nip.io"
    http:
      paths:
      - backend:
          service:
            name: account
            port:
              number: 80
        path: /api/accountManagement/v4/
        pathType: Prefix
